--- a/t-4/t-4.html
+++ b/t-4/t-4.html
@@ -78,6 +78,9 @@
                         <td>
                             <button class="slbtn" onclick="tableToJson()">To json</button>
                         </td>
+                        <td>
+                            <button class="slbtn" onclick="tableFromJson()">From json</button>
+                        </td>
                     </tr>
                 </table>
             </td>
