--- a/mail/index.html
+++ b/mail/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <style>
         label {
             width: 300px;
@@ -17,39 +20,110 @@
 </head>
 
 <body>
-<script src="/socket.io/socket.io.js"></script>
-<script>
-    var socket = io.connect('http://localhost:5000');
-    socket.on('message', function(message){
-        alert('Сервер прислал Вам сообщение: '+ message)
-    });
-</script>
-<script>
-    async function sendMessage(){
-        var text = document.getElementById('textarea').value;
-        var email = document.getElementById('email').value;
-        if (email != ""){
-            socket.emit('eventClient', {message:text, recipient: email});
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+        var socket = io.connect('http://localhost:5000');
+        socket.on('message', function (message) {
+            alert('Сервер прислал Вам сообщение: ' + message)
+        });
+    </script>
+    <script>
+        var recognizer = new webkitSpeechRecognition();
+        recognizer.interimResults = true;
+        recognizer.lang = 'ru-Ru';
+        var voices = speechSynthesis.getVoices();
+
+        async function sendMessage() {
+            var text = document.getElementById('textarea').value;
+            var email = document.getElementById('email').value;
+            if (email != "") {
+                socket.emit('eventClient', { message: text, recipient: email });
+            }
+            else {
+                alert("Заполните поле Получатель")
+            }
+
         }
-        else {
-            alert("Заполните поле Получатель")
+        function speechRecognition() {
+            document.getElementById('status').style = "display:flex";
+            recognizer.onresult = function (event) {
+                var result = event.results[event.resultIndex];
+                document.getElementById('textarea').value = result[0].transcript;
+                if (result[0].transcript == 'отправь сообщение') {
+                    sendMessage();
+                }
+            }
+            recognizer.start();
+        }
+        function stopRecognition() {
+            document.getElementById('status').style = "display:none";
+            recognizer.stop();
+        }
+        function speakText() {
+            var inputTxt = document.getElementById('textarea').value;
+            var voiceSelect = document.querySelector('select');
+            if (inputTxt !== "") {
+                window.speechSynthesis.cancel();
+                const utterance = new SpeechSynthesisUtterance(inputTxt);
+                utterance.rate = 5.0;
+                utterance.pitch = 2;
+                var selectedOption = voiceSelect.selectedOptions[0].getAttribute('data-name');
+                var voices = speechSynthesis.getVoices();
+                for (i = 0; i < voices.length; i++) {
+                    if (voices[i].name === selectedOption) {
+                        utterance.voice = voices[i];
+                    }
+                }
+                window.speechSynthesis.speak(utterance);
+            } else {
+                alert("Введите текст");
+            }
         }
 
-    }
-</script>
+        function populateVoiceList() {
+            if (typeof speechSynthesis === 'undefined') {
+                return;
+            }
+            var voices = speechSynthesis.getVoices();
+            for (var i = 0; i < voices.length; i++) {
+                var option = document.createElement('option');
+                option.textContent = voices[i].name + ' (' + voices[i].lang + ')';
+
+                if (voices[i].default) {
+                    option.textContent += ' -- DEFAULT';
+                }
+
+                option.setAttribute('data-lang', voices[i].lang);
+                option.setAttribute('data-name', voices[i].name);
+                document.getElementById("voiceSelect").appendChild(option);
+            }
+        }
+
+        populateVoiceList();
+        if (typeof speechSynthesis !== 'undefined' && speechSynthesis.onvoiceschanged !== undefined) {
+            speechSynthesis.onvoiceschanged = populateVoiceList;
+        }
+
+    </script>
     <div id="wrapper">
         <p><label>Получатель:
-                <input type="email" id="email"></label></p>
+                <input type="email" id="email" style="border: 1px solid gray; border-radius: 8px;width: 370px;"
+                    value="example@yandex.ru"></label></p>
         <label>Текст:
-            <textarea id="textarea" style="width: 300px; height: 150px;">
+            <textarea id="textarea" style="border: 1px solid gray; border-radius: 8px; width: 370px; height: 150px;">
             Привет, как дела?
             </textarea>
         </label>
     </div>
     <div id="buttons">
-        <button onclick="sendMessage()" class="sendMessage">Отправить</button>
-        <button onclick="record()" class="record">Записать с микрофона</button>
-        <button onclick="voice()" class="voice">Озвучить текст</button>
+        <button onclick="sendMessage()" class="btn btn-warning">Отправить</button>
+        <button onclick="speechRecognition()" class="btn btn-success">Записать с микрофона</button>
+        <button onclick="stopRecognition()" class="btn btn-danger">Остановить запись</button>
+        <button onclick="speakText()" class="btn btn-info">Озвучить текст</button>
+
+        <select id="voiceSelect">
+        </select>
+        <p id="status" style="display:none">Слушаю ...</p>
     </div>
 </body>
 
